# python-glsl-shaderinfo

./: Cargo.toml  README.md  hexgrid_geometry.glsl-ast  pyproject.toml
src/: glsl_shaderinfo.rs  lib.rs  main.rs
src/glsl_shaderinfo/: mod.rs  utils.rs
